# myHandbook

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  README.md  config.xml  environment.yml  main.py  mermaidConfig.json  my 3-3-3-1 2DM.fmf  package-lock.json  package.json  pyproject.toml  tree.txt
.github/: additional-copilot-instructions.md  copilot-instructions.md
Manager Handbook/Volume 1/: mangerCycle.mmd
Manager Handbook/Volume 5/: Match Notes.odt
Volume 1/: Volume 1 - Philosophy & Tactical Blueprint.odt  creatingSpace.mmd
docs/volume-1/: The_Managers_Handbook_Volume_I_Skeleton.odt
documentation/: fmparserArchitecture.md  reverseEngineering.md  skinBundleExplorer.md  styleGuide.md
fmparser/: __init__.py  __main__.py  binary.py  bundleFilter.py  bundles.py  cli.py  compression.py  config.py  diff.py  parser.py  qtBundleExplorer.py  report.py  signatures.py  structures.py  structuresDiscovery.py  structures_discovery.py
fmparser/automation/: README.md  __init__.py  action.py  navigator.py  recorder.py  screen_map.py  screenshot.py  templateMatcher.py  template_matcher.py
fmparser/documentation/: automationFramework.md
fmparser/samples/: 3-3-3-1 Morphing System High Press.fmf  3-3-3-1 Morphing System.fmf  README.md  my 3-3-3-1 1DM.fmf
fmparser/tests/: test_automation.py  test_bundleFilter.py  test_bundles.py  test_cli.py  test_compression.py  test_diff.py  test_qtBundleExplorer.py  test_signatures.py  test_tactics_ip_role_plugin.py
scripts/: config.xml  createFacePack.py  generateDiagrams.sh
templates/: .~lock.myManagerHandbook-StyleTemplate.ott#  CHANGELOG.md  myManagerHandbook Template.ott  myManagerHandbook-StyleTemplate.odt  myManagerHandbook-StyleTemplate.ott  myTemplate.ott
tests/fmparser/: test_binary.py  test_cli.py  test_qtBundleExplorer.py  test_signatures.py
walking-football/: README.md  main.py
walking-football/chapters/: Coaching Manual.odt
(+34 files in other folders)
