[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fmparser"
version = "0.1.0"
description = "Reverse engineering toolkit for Football Manager tactic files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "FMParser contributors" }]
dependencies = []

[project.optional-dependencies]
compression = ["lz4>=4.3.3", "zstandard>=0.22.0"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "mypy>=1.10.0"]

[project.scripts]
fmparser = "fmparser.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
