[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fmparser"
version = "0.1.0"
description = "Reverse engineering toolkit for Football Manager tactic files"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "FMParser contributors" }]
dependencies = []

[project.optional-dependencies]
bundles = ["UnityPy>=1.20.0"]
compression = ["lz4>=4.3.3", "zstandard>=0.22.0"]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "types-PyAutoGUI>=0.9.3.20241230",
    "types-PyYAML>=6.0.12",
]
gui = ["PySide6>=6.7.0"]
automation = [
    "PySide6>=6.7.0",
    "PyAutoGUI>=0.9.54",
    "Pillow>=10.0.0",
    "opencv-python>=4.10.0",
    "PyYAML>=6.0.1",
]

[project.scripts]
fmparser = "fmparser.cli:main"

[tool.pytest.ini_options]
testpaths = ["fmparser/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
